--- a/angular.json
+++ b/angular.json
@@ -57,6 +57,14 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "mock": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
             }
           }
         },
@@ -68,6 +76,9 @@
           "configurations": {
             "production": {
               "browserTarget": "my-first-project:build:production"
+            },
+            "mock": {
+              "browserTarget": "my-first-project:build:mock"
             }
           }
         },
